<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>packml_plc</name>
  <version>0.0.0</version>
  <description>Package to control and monitor a PackML state machine following the standard template in a Siemens PLC with OPCUA tags</description>
  <maintainer email="dejanira_araiza@artc.a-star.edu.sg">Dejanira Araiza-Illan</maintainer>
  <author email="dejanira_araiza@artc.a-star.edu.sg">Dejanira Araiza-Illan</author>
  <license>Apache 2.0</license>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>packml_msgs</exec_depend>
  <exec_depend>opcua</exec_depend>

  <export>
<build_type>ament_python</build_type>
  </export>
</package>
