<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>packml_ros2</name>
  <version>0.0.0</version>
  <description>
    ROS2 PackML
  </description>
  <maintainer email="chenbn@artc.a-star.edu.sg">Chen Bainian</maintainer>
  <maintainer email="dejanira.araiza.i@gmail.com">Dejanira Araiza-Illan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>packml_msgs</exec_depend>
  <exec_depend>packml_plugin</exec_depend>
  <exec_depend>packml_ros</exec_depend>
  <exec_depend>packml_plc</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
